--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Install Me</title>
     <link rel="stylesheet" type="text/css" href="style/addtohomescreen.css">
     <script src="src/addtohomescreen.js"></script>
