css change only on homescreen llaunch

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       button {
         font-size: 5em;
       }
+      
+      @media all and (display-mode: standalone) {
+        body {
+          background-color: yellow;
+        }
+      }
     </style>
   </head>
   <body>
